--- a/SatelliteTec/SatelliteTec/SatelliteTec.csproj
+++ b/SatelliteTec/SatelliteTec/SatelliteTec.csproj
@@ -180,6 +180,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202006030428599_InitialCreate.cs" />
+    <Compile Include="Migrations\202006030428599_InitialCreate.Designer.cs">
+      <DependentUpon>202006030428599_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202006030446203_Aplication user -State.cs" />
+    <Compile Include="Migrations\202006030446203_Aplication user -State.Designer.cs">
+      <DependentUpon>202006030446203_Aplication user -State.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Almacen.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -384,6 +393,14 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202006030428599_InitialCreate.resx">
+      <DependentUpon>202006030428599_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202006030446203_Aplication user -State.resx">
+      <DependentUpon>202006030446203_Aplication user -State.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
