--- a/SatelliteTec/SatelliteTec/SatelliteTec.csproj
+++ b/SatelliteTec/SatelliteTec/SatelliteTec.csproj
@@ -188,6 +188,10 @@
     <Compile Include="Migrations\202006030446203_Aplication user -State.Designer.cs">
       <DependentUpon>202006030446203_Aplication user -State.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202006032040034_State.cs" />
+    <Compile Include="Migrations\202006032040034_State.Designer.cs">
+      <DependentUpon>202006032040034_State.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Almacen.cs" />
@@ -400,6 +404,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202006030446203_Aplication user -State.resx">
       <DependentUpon>202006030446203_Aplication user -State.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202006032040034_State.resx">
+      <DependentUpon>202006032040034_State.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
