--- a/SatelliteTec/SatelliteTec/SatelliteTec.csproj
+++ b/SatelliteTec/SatelliteTec/SatelliteTec.csproj
@@ -180,17 +180,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202006030428599_InitialCreate.cs" />
-    <Compile Include="Migrations\202006030428599_InitialCreate.Designer.cs">
-      <DependentUpon>202006030428599_InitialCreate.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202006030446203_Aplication user -State.cs" />
-    <Compile Include="Migrations\202006030446203_Aplication user -State.Designer.cs">
-      <DependentUpon>202006030446203_Aplication user -State.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202006032040034_State.cs" />
-    <Compile Include="Migrations\202006032040034_State.Designer.cs">
-      <DependentUpon>202006032040034_State.cs</DependentUpon>
+    <Compile Include="Migrations\202006040230070_001.cs" />
+    <Compile Include="Migrations\202006040230070_001.Designer.cs">
+      <DependentUpon>202006040230070_001.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -399,14 +391,8 @@
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202006030428599_InitialCreate.resx">
-      <DependentUpon>202006030428599_InitialCreate.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202006030446203_Aplication user -State.resx">
-      <DependentUpon>202006030446203_Aplication user -State.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202006032040034_State.resx">
-      <DependentUpon>202006032040034_State.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202006040230070_001.resx">
+      <DependentUpon>202006040230070_001.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
