--- a/SatelliteTec/SatelliteTec/Web.config
+++ b/SatelliteTec/SatelliteTec/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="MyConnection" connectionString="Server=.\SQLEXPRESS;Database=Satellite;User Id=sa;Password=****" providerName="System.Data.SqlClient" />
-    <!-- <add name="MyConnection" connectionString="Server=.\SQLEXPRESS;Database=Satellite;Trusted_Connection=True;" providerName="System.Data.SqlClient" />  -->
+    <!--<add name="MyConnection" connectionString="Server=.\SQLEXPRESS;Database=Satellite;User Id=sa;Password=****" providerName="System.Data.SqlClient" />-->
+    <add name="MyConnection" connectionString="Server=.\SQLEXPRESS;Database=Satellite;Trusted_Connection=True;" providerName="System.Data.SqlClient" />  
     
   </connectionStrings>
   <appSettings>
